<resources>
    <string name="app_name">MoneyHater</string>

    <string name="title_section1">Transaction</string>
    <string name="title_section2">Account</string>
    <string name="title_section3">Budget</string>
    <string name="title_section4">Chart</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_bar_setting">Settings</string>
    <string name="action_settings">Settings</string>

    <!-- Transaction screen-->
    <string name="tvInCome">Income</string>
    <string name="tvExpense">Expense</string>
    <string name="tvIncomeCash">0</string>
    <string name="tvExpenseCash">0</string>
    <string name="tvSumCash">0</string>


    <string name="tvDateSet">22</string>
    <string name="tvMonthSet">July</string>
    <string name="tvYearSet">2015</string>
    <string name="tvDateSetSumMoney">100,000</string>
    <string name="tvCategoryName">Selling</string>
    <string name="tvNote">Sell Tivi</string>
    <string name="tvTransactionMoney">100,000</string>
    <string name="title_activity_new_budget">Adding Budget</string>
    <string name="title_activity_new_account">Adding Account</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_new_transaction">Adding Transaction</string>

    <string name="hello_world">Hello world!</string>
    <string name="lbAddTransName">Name</string>
    <string name="lbAddTransAccountName">Account</string>
    <string name="lbAddTransBudgetName">Budget</string>
    <string name="lbAddTransactionDate">Date</string>
    <string name="lbAddTransactionCategory">Category</string>
    <string name="pref_lst_files">List files have backup</string>
    <string name="pref_backup_option">Backup Preference</string>
    <string name="action_backup">Backup</string>
    <string name="title_activity_edit_transaction">Edit Transaction</string>
    <string name="title_activity_edit_account">Edit Account</string>
    <string name="title_activity_edit_budget">Edit Budget</string>
    <string name="title_activity_choose_category">Choose category</string>
    <string name="other">Other</string>
    <string name="tv_total_account">Total</string>
    <string name="lb_chart_month">In Month</string>
    <string name="lb_chart_year">In Year</string>
    <string name="lb_account_name">Name</string>
    <string name="lb_account_total_money">Total Money</string>
    <string name="lb_account_type">Type</string>
    <string name="message_delete_acc">Warning: Delete this account will cause to also delete its transactions.</string>
    <string name="btn_delete_acc">Delete</string>
    <string name="btn_cancel_acc">Cancel</string>
    <string name="title_activity_about">About</string>
    <string name="tvAbout">Team: Light of Life</string>
    <string name="tvMember">Hoàng Anh Tuấn SE02707 \nBùi Đắc Huy SE02612\nĐặng Tuấn Anh SE02636\nĐào Tuấn Anh SE02807\nNguyễn Duy Đăng SE02787</string>

    <!-- Account screen-->

    <!-- Budget screen-->

    <!-- Chart screen-->

</resources>
