<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="vn.lol.moneyhater.moneyhater.activity.AboutActivity"
              android:orientation="vertical"
              android:background="#33ad34">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/abc_text_size_display_3_material"
        android:textColor="#fdffff"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="--------------"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/abc_text_size_display_1_material"
        android:textColor="#ffffff"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tvAbout"
        android:id="@+id/textView3"
        android:layout_gravity="center_horizontal"
        android:textColor="#ffffff"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tvMember"
        android:id="@+id/textView4"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        android:textColor="#ffffff"
        android:textSize="20sp"/>
</LinearLayout>
